tests/checker/diagnostics/0238_adt_tuple_constructor_mismatch_10.ml.infer.expected
File "0238_adt_tuple_constructor_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0238_adt_tuple_constructor_mismatch_10 is not a valid module name.

File "0238_adt_tuple_constructor_mismatch_10.ml", line 2, characters 32-36:
2 | let _ : rec_kappa = Pair_kappa (true, 9)
                                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
